mobile and character fixes
- fixed mobile devices not being able to interact
- Fixed incorrect special characters
- added keyboard shortcuts for beginner mode (although they're active at all times)
- updated cheatsheet to a better one

--- a/index.html
+++ b/index.html
@@ -149,8 +149,13 @@
         </p>
 
         <h1>Cheat sheet</h1>
+
+        <p>Supported morse code symbols are provided below</p>
+
         <img src="cheatsheet.png">
-        <p class="secondary">Source: <a href="https://www.carddia.com/pages/resource-download-international-morse-code">carddia.com</a></p>
+        <p class="secondary">Source: <a href="https://morsecode.world/international/morse2.html">morsecode.world</a></p>
+
+        
     </div>
 
     <!-- Font Awesome -->
